--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1013,56 +1013,127 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Hotels Section
+# Beaches Section
 --------------------------------------------------------------*/
-#hotels {
+#beaches {
   padding: 60px 0;
 }
 
-#hotels .hotel {
+#beaches .container-fluid {
+  margin-bottom: 3px;
+}
+
+#beaches .venue-map iframe {
+  width: 100%;
+  height: 100%;
+  min-height: 300px;
+}
+
+#beaches .venue-info {
+  background: url("../img/table.webp") top center no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+#beaches .venue-info:before {
+  content: "";
+  background: rgba(13, 20, 41, 0.8);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#beaches .venue-info h3 {
+  font-size: 36px;
+  font-weight: 700;
+  color: #fff;
+}
+
+@media (max-width: 574px) {
+  #venue .venue-info h3 {
+    font-size: 24px;
+  }
+}
+
+#beaches .venue-info p {
+  color: #fff;
+  margin-bottom: 0;
+}
+
+#beaches .venue-gallery-container {
+  padding-right: 12px;
+}
+
+#beaches .venue-gallery {
+  overflow: hidden;
+  border-right: 3px solid #fff;
+  border-bottom: 3px solid #fff;
+}
+
+#beaches .venue-gallery img {
+  transition: all ease-in-out 0.4s;
+}
+
+#beaches .venue-gallery:hover img {
+  transform: scale(1.1);
+}
+
+/*--------------------------------------------------------------
+# Hotels Section
+--------------------------------------------------------------*/
+#clubs {
+  padding: 60px 0;
+}
+
+#clubs .hotel {
   border: 1px solid #e0e5fa;
   background: #fff;
   margin-bottom: 30px;
 }
 
-#hotels .hotel:hover .hotel-img img {
+#clubs .hotel:hover .hotel-img img {
   transform: scale(1.1);
 }
 
-#hotels .hotel-img {
+#clubs .hotel-img {
   overflow: hidden;
   margin-bottom: 15px;
 }
 
-#hotels .hotel-img img {
+#clubs .hotel-img img {
   transition: 0.3s ease-in-out;
 }
 
-#hotels h3 {
+#clubs h3 {
   font-weight: 600;
   font-size: 20px;
   margin-bottom: 5px;
   padding: 0 20px;
 }
 
-#hotels a {
+#clubs a {
   color: #152b79;
 }
 
-#hotels a:hover {
+#clubs a:hover {
   color: #f82249;
 }
 
-#hotels .stars {
+#clubs .stars {
   padding: 0 20px;
   margin-bottom: 5px;
 }
 
-#hotels .stars i {
+#clubs .stars i {
   color: rgb(255, 195, 29);
 }
 
-#hotels p {
+#clubs p {
   padding: 0 20px;
   margin-bottom: 20px;
   color: #060c22;
@@ -1662,4 +1733,10 @@ h6 {
 #map img {
   max-width: 100%;
   height: auto;
+}
+
+#custom-map {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
