--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1015,7 +1015,7 @@ h6 {
 /*--------------------------------------------------------------
 # Beaches Section
 --------------------------------------------------------------*/
-#beaches {
+#beaches .section-header {
   padding: 60px 0;
 }
 
