--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -658,7 +658,7 @@ h6 {
 # About Section
 --------------------------------------------------------------*/
 #about {
-  background: url("../img/villa-pool.webp");
+  background: url("../img/villa/pool1.bmp");
   background-size: cover;
 
   overflow: hidden;
