--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1221,6 +1221,70 @@ h6 {
 #supporters img {
   transition: all 0.4s ease-in-out;
 }
+/*--------------------------------------------------------------
+# todo Section
+--------------------------------------------------------------*/
+#todo {
+  padding: 60px 0;
+}
+
+#todo .faq-list {
+  padding: 0;
+  list-style: none;
+}
+
+#todo .faq-list li {
+  border-bottom: 1px solid #e9eaed;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+}
+
+#todo .faq-list .question {
+  display: block;
+  position: relative;
+  font-family: #f82249;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 400;
+  padding-left: 25px;
+  cursor: pointer;
+  color: #e0072f;
+  transition: 0.3s;
+}
+
+#todo .faq-list i {
+  font-size: 16px;
+  position: absolute;
+  left: 0;
+  top: -2px;
+}
+
+#todo .faq-list p {
+  margin-bottom: 0;
+  padding: 10px 0 0 25px;
+}
+
+#todo .faq-list .icon-show {
+  display: none;
+}
+
+#todo .faq-list .collapsed {
+  color: black;
+}
+
+#todo .faq-list .collapsed:hover {
+  color: #f82249;
+}
+
+#todo .faq-list .collapsed .icon-show {
+  display: inline-block;
+  transition: 0.6s;
+}
+
+#todo .faq-list .collapsed .icon-close {
+  display: none;
+  transition: 0.6s;
+}
 
 /*--------------------------------------------------------------
 # F.A.Q Section
